# gdilib-rs

./: Cargo.toml  licence.txt  readme.md
src/: effects.rs  lib.rs  licence.txt  utils.rs
src/advanced/: complexeffect.rs
