[package]
name = "gdilib-rs"
description = "GDI library for desktop effects"
readme = "readme.md"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}
random-number = "0.1.7"

[keywords]
keywords = ["GDI", "desktop", "drawing", "effects", "gdilib-rs"]

[categories]
category = ["gdi", "desktop"]