[package]
name = "gdilib-rs"
description = "GDI library for desktop effects"
licence = "MIT"
license-file = "LICENCE.txt"
readme = "readme.md"
repository = "https://github.com/Jaranamo1/gdilib-rs/"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}
random-number = "0.1.7"

[keywords]
keywords = ["GDI", "desktop", "drawing", "effects", "gdilib-rs"]

[categories]
category = ["gdi", "desktop"]